--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,22 +1,45 @@
-<!doctype html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
-	</head>
-	<body>
-		<slot />
-	</body>
-</html>
+---
+import '@fontsource/lxgw-wenkai';
+import "../styles/global.css";
+import { ClientRouter } from "astro:transitions";
+import NavLink from "../components/NavLink.astro";
+---
 
-<style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
-</style>
+<html lang="en" class="h-full">
+  <head>
+    <!-- Global Metadata -->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="generator" content={Astro.generator} />
+
+    <!-- Primary Meta Tags -->
+    <title>{"David's Blog"}</title>
+    <meta name="title" content={"David's Blog"} />
+    <meta name="description" content={"David's Blog"} />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content={Astro.url} />
+    <meta property="og:title" content={"David's Blog"} />
+    <meta property="og:description" content={"David's Blog"} />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content={Astro.url} />
+    <meta property="twitter:title" content={"David's Blog"} />
+    <meta property="twitter:description" content={"David's Blog"} />
+
+    <ClientRouter />
+  </head>
+  <body
+    class="font-sans text-neutral-900 bg-neutral-50 antialiased transition-colors min-h-full flex flex-col justify-center items-center"
+  >
+    <div class="max-w-xl mx-auto p-4 selection:bg-blue-100 selection:text-blue-500">
+		<header class="mb-6 flex items-center justify-between" transition:name="header">
+			 <NavLink/>
+		</header>
+      <slot />
+    </div>
+  </body>
+</html>
