--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -3,23 +3,55 @@ import { getCollection } from "astro:content";
 import Layout from "../../layouts/Layout.astro";
 
 const projects = await getCollection("projects");
+const projectsByYear = projects.reduce<Record<string, typeof projects>>((acc, project) => {
+  const year = project.data.date;
+  if (!acc[year]) {
+    acc[year] = [];
+  }
+  acc[year].push(project);
+  return acc;
+}, {});
+
+const sortedYears = Object.keys(projectsByYear).sort((a, b) => Number(b) - Number(a));
 ---
 
 <Layout>
   <main>
-    <ul class="flex flex-col gap-1.5">
-      {
-        projects.map((project) => (
+
+{/* 然后在 JSX 中渲染 */}
+<div class="flex flex-col gap-6">
+  {sortedYears.map((year) => (
+    <div class="flex flex-col gap-3">
+      {/* 年份标题 */}
+      <h2 class="text-xl font-mono text-gray-500">{year}</h2>
+      
+      {/* 该年份下的项目列表 */}
+      <ul class="flex flex-col gap-1.5">
+        {projectsByYear[year].map((project) => (
           <li>
             <a
               href={`/projects/${project.id}`}
-              class="group flex justify-between gap-3"
+              class="group flex items-center gap-3"
             >
               <span class="group-hover:underline">{project.data.title}</span>
+              
+              {/* 项目类型标签 */}
+              <span 
+                class={`
+                  text-xs px-2 py-0.5 rounded-full
+                  ${project.data.type === "个人" 
+                    ? "bg-blue-100 text-blue-800" 
+                    : "bg-green-100 text-green-800"}
+                `}
+              >
+                {project.data.type}
+              </span>
             </a>
           </li>
-        ))
-      }
-    </ul>
+        ))}
+      </ul>
+    </div>
+  ))}
+</div>
   </main>
 </Layout>
