fix: update project descriptions and image alt texts for clarity

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import Layout from "../layouts/Layout.astro";
 <main class="space-y-4">
   <p class="text-3xl font-bold">董皓宇（David）</p>
   <p>三年的前端开发经验, 目前在香港某 Web3 公司实习，曾在腾讯音乐和北大研究院实习和工作过。</p>
-  <p>具备数据可视化、大语言模型应用、区块链 dApp 开发的实践经验，同时也有 B 端管理系统和 C 端互动产品开发的业务背景。</p>
+  <p>具备数据可视化、大语言模型应用、区块链 dApp 开发的实践经验，具有LLM 应用开发、后台管理系统、智慧城市、直播和互动游戏产品等业务背景。</p>
   <p>目前正在寻求一些新的工作机会，欢迎<a href="/resume.pdf" class="underline cursor-pointer">联系我</a> 👋。</p>
 </main>
  
