--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -17,41 +17,35 @@ const sortedYears = Object.keys(projectsByYear).sort((a, b) => Number(b) - Numbe
 
 <Layout>
   <main>
-
-{/* 然后在 JSX 中渲染 */}
-<div class="flex flex-col gap-6">
-  {sortedYears.map((year) => (
-    <div class="flex flex-col gap-3">
-      {/* 年份标题 */}
-      <h2 class="text-xl font-mono text-gray-500">{year}</h2>
-      
-      {/* 该年份下的项目列表 */}
-      <ul class="flex flex-col gap-1.5">
-        {projectsByYear[year].map((project) => (
-          <li>
-            <a
-              href={`/projects/${project.id}`}
-              class="group flex items-center gap-3"
-            >
-              <span class="group-hover:underline">{project.data.title}</span>
-              
-              {/* 项目类型标签 */}
-              <span 
-                class={`
-                  text-xs px-2 py-0.5 rounded-full
-                  ${project.data.type === "个人" 
-                    ? "bg-blue-100 text-blue-800" 
-                    : "bg-green-100 text-green-800"}
-                `}
-              >
-                {project.data.type}
-              </span>
-            </a>
-          </li>
-        ))}
-      </ul>
+    <div class="flex flex-col gap-6">
+      {sortedYears.map((year) => (
+        <div class="flex flex-col gap-3">
+          <h2 class="text-xl font-mono text-neutral-500">{year}</h2>
+          
+          <ul class="flex flex-col gap-1.5">
+            {projectsByYear[year].map((project) => (
+              <li>
+                <a
+                  href={`/projects/${project.id}`}
+                  class="group flex items-center gap-3"
+                >
+                  <span class="group-hover:underline">{project.data.title}</span>
+                  <span 
+                    class={`
+                      text-xs px-2 py-0.5 rounded-full
+                      ${project.data.type === "个人" 
+                        ? "bg-blue-100 text-blue-800" 
+                        : "bg-green-100 text-green-800"}
+                    `}
+                  >
+                    {project.data.type}
+                  </span>
+                </a>
+              </li>
+            ))}
+          </ul>
+        </div>
+      ))}
     </div>
-  ))}
-</div>
   </main>
 </Layout>
