--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -37,7 +37,7 @@ import NavLink from "../components/NavLink.astro";
   <body
     class="font-sans text-neutral-900 bg-neutral-50 antialiased transition-colors min-h-full flex flex-col justify-center items-center"
   >
-    <div class="max-w-xl mx-auto p-4 selection:bg-blue-100 selection:text-blue-500">
+    <div class="w-xs sm:w-xl mx-auto p-4 selection:bg-blue-100 selection:text-blue-500">
 		<header class="mb-6 flex items-center justify-between" transition:name="header">
 			 <NavLink/>
 		</header>
